--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
   --nav: #36b;
   --prp: #639;
 
-  --bgOpacity: 0.25;
+  --bgOpacity: 0.15;
 }
 
 * { box-sizing: border-box }
@@ -26,7 +26,10 @@ html {
 }
 
 .show {
-  body { margin: 0 }
+  body {
+    font-size: 2rem;
+    margin: 0
+  }
 
   main {
     scroll-snap-type: block mandatory;
@@ -37,21 +40,29 @@ html {
 
   main > div {
     height: 100vh;
+    width: 100%;
     scroll-snap-align: start;
-
-    display: grid;
-    place-content: center;
+    padding: 2rem;
     &:not(:last-child) {
         margin-bottom: 1rem;
     }
   }
-
-  .title {
-    h1 { font-size: 3rem }
-    p { font-size: 2rem }
+  h2 {
+    height: 4rem;
+    text-align: center;
+  }
+  main > div > div {
+    height: calc( 100vh - 4rem );
+    width: 100%;
   }
 
   .center { text-align: center }
+  .centerblock {
+    display: grid;
+    place-content: center;
+  }
+  .balance { text-wrap: balance }
+  .hide { display: none }
 
   .mgn {background-color: hsl(from var(--mgn) h s l / var(--bgOpacity)) }
   .pch {background-color: hsl(from var(--pch) h s l / var(--bgOpacity)) }
