better reveals, codepen iframe

--- a/style.css
+++ b/style.css
@@ -64,6 +64,14 @@ html {
   li {
     margin-block: 2rem;
   }
+  iframe {
+    position: relative;
+    top: 27.5%;
+    left: 25%;
+    width: 50%;
+    height: 45%;
+    scale: 2;
+  }
 
   .center { text-align: center }
   .centerblock {
