--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ html {
       > article {
         height: 100vh;
         width: 100%;
-        padding-inline: 5vh;
+        padding-inline: 2.5vh;
         scroll-snap-align: start;
         &:not(:last-child) {
             margin-bottom: 1rem;
@@ -62,9 +62,9 @@ html {
 
   article > div {
     background-color: color-mix(in srgb, Gray 10%, Canvas);
-    border-radius: 2rem;
+    border-radius: 1rem;
     padding: 1rem 3rem;
-    height: 80vh;
+    height: 82.5vh;
   }
 
   article > div:has(style) {
@@ -125,6 +125,53 @@ html {
   }
   style {
     font-size: 0.75em;
+  }
+
+  #both > div {
+    position: relative;
+    display: grid;
+    place-content: center;
+  }
+  #both p {
+    position: absolute;
+    font-size: 5vw;
+  }
+  #both p:nth-of-type(1) {
+    bottom: 3vw;
+    left: 60vw;
+  }
+  #both p:nth-of-type(2) {
+    top: 1vw;
+    left: 10vw;
+  }
+  #both p:nth-of-type(3) {
+    bottom: 0;
+    left: 20vw;
+  }
+  #both p:nth-of-type(4) {
+    top: 0;
+    right: 10vw;
+  }
+  .waviy {
+    position: relative;
+    font-size: 10vw;
+  }
+  .waviy span {
+    position: relative;
+    display: inline-block;
+    color: #fff;
+    text-transform: uppercase;
+    animation: waviy 2s infinite;
+    animation-delay: calc(0.1s  * var(--i));
+  }
+}
+
+@keyframes waviy {
+  0%, 40%, 100% {
+    transform: translateY(0)
+  }
+  20% {
+    transform: translateY(-3vw)
   }
 }
 
