--- a/style.css
+++ b/style.css
@@ -44,19 +44,12 @@ html {
         width: 100%;
         padding-inline: 2.5vh;
         scroll-snap-align: start;
-        &:not(:last-child) {
-            margin-bottom: 1rem;
-        }
 
         > h2 {
           height: 15vh;
           line-height: 15vh;
           text-align: center;
           margin: 0;
-        }
-
-        > div > ul > li {
-          margin-block: 3rem;
         }
       }
     }
@@ -65,8 +58,11 @@ html {
   article > div {
     background-color: var(--bgColor);
     border-radius: 1rem;
-    padding: 1rem 5rem;
+    padding: 1vw 5vw;
     height: 82.5vh;
+    > ul > li {
+      margin-block: 3rem;
+    }
   }
 
   article > div:has(style) {
@@ -94,6 +90,10 @@ html {
     border-radius: 1rem;
   }
 
+  .light { color-scheme: light }
+  .dark { color-scheme: dark }
+  .lowcontrast { filter: contrast(0.5) }
+
   .right { text-align: right }
   .center { text-align: center }
   .centerblock {
@@ -118,6 +118,9 @@ html {
   .hide {
     opacity: 0;
     transition: opacity ease-in-out 0.25s;
+    @media print, (any-hover: none) {
+      opacity: 1;
+    }
   }
   .reveal {
     z-index: 0 !important;
@@ -246,6 +249,36 @@ html {
     right: 1rem;
     width: auto;
   }
+
+  #themes .default > div {
+    border-radius: 1rem;
+    margin-block: 1.75rem;
+    padding: 0 1.5rem;
+    justify-content: space-between;
+  }
+  #themes .default * {
+    font-size: 1.4vw;
+    font-family: initial;
+    line-height: 1.2;
+  }
+
+  #choice table {
+    width: 100%;
+    height: 95%;
+    border-spacing: 1rem;
+    tr:first-child {
+      height: 15%;
+    }
+    th:first-child {
+      width: 15%;
+    }
+    td {
+      font-size: 300%;
+      border-radius: 1rem;
+      text-align: center;
+      vertical-align: middle;
+    }
+  }
 }
 
 @keyframes waviy {
@@ -281,14 +314,10 @@ button#mode {
 #themes .default, 
 #themes .default > div {
   display: flex;
-  justify-content: space-between;
   gap: 5vw;
 }
 #themes .default {
   > div {
-    border-radius: 1rem;
-    margin-block: 1.75rem;
-    padding: 0 1.5rem;
     color: CanvasText;
     background-color: Canvas;
   }
@@ -299,8 +328,8 @@ button#mode {
     color-scheme: dark;
   }
 }
-#themes .default * {
-  font-size: 1.4vw;
-  font-family: initial;
-  line-height: 1.2;
+
+#choice table td {
+  color: CanvasText;
+  background-color: Canvas;
 }
